# personal-finance

./: .dockerignore  .env.aws.example  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  package.json  pyproject.toml
config/: category_mapping.csv  downloaders.json  monthly_budget.csv  settings.json
docs/: automation-strategy.md  aws-lightsail.md  downloader-setup.md  gcp-cloudrun.md  github-account.md  reporting-workflow.md  runbook.md
scripts/: aws-lightsail-deploy.sh  download-transactions.mjs  gcloud-codex.sh  gcp-cloudrun-deploy.sh  migrate_sqlite_to_postgres.py  set-provider-selectors.mjs
src/personal_finance/: __init__.py  cli.py  config.py  date_ranges.py  downloader.py  ingest.py  reporting.py
src/personal_finance/web/: __init__.py  app.py  db.py  models.py  parsing.py  reports.py  seed.py  settings.py
src/personal_finance/web/services/: categorizer.py
src/personal_finance/web/static/: app.css
src/personal_finance/web/templates/: base.html  budgets.html  categories.html  dashboard.html  historical_report.html  import_preview.html  import_result.html  import_upload.html  ledger.html  mappings.html  monthly_report.html  reports_dashboard.html  year_close.html
tests/: test_auth_guards.py  test_date_ranges.py  test_import_preview_dedupe.py  test_reports_business_expense.py
